@@ -12,7 +12,7 @@ reducempit_CFLAGS = -I../.. -I../common
 
 papi_best_set_SOURCES = papi_best_set.c
 papi_best_set_CFLAGS  = -I. -I../common -DPAPI_HOME='"$(PAPI_HOME)"' @PAPI_CFLAGS@
-papi_best_set_LDFLAGS = -all-static @PAPI_LDFLAGS@ @PAPI_LIBS@
+papi_best_set_LDFLAGS = @PAPI_LDFLAGS@ @PAPI_LIBS@
 
 PYTHON_MODULE = pyextrae.py
 noinst_SCRIPTS = $(PYTHON_MODULE)
