@@ -31,7 +31,6 @@
 #define CUDA_WRAPPER_H_
 
 void Extrae_CUDA_init (int rank);
-void Extrae_CUDA_fini (void);
 
 #endif
 
