@@ -1,6 +1,8 @@
 
 ChangeLog
  [ + added, - removed, * changed ]
+ * 04Jul2013 Fix compilation of papi_best_set for PAPI when using CUDA
+             Move Extrae_CUDA_fini to cuda_common.c
  * 02Jul2013 Fixed compilation flags for the merger to enable the online support.
  * 02Jul2013 Fixed which events are cached to keep the communicators definitions in the online analysis. 
  * 02Jul2013 The first spectral analysis now applies windowing to the first 10% of the data.
